--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
     "firebase": "^4.6.1",
+    "howler": "^2.0.5",
     "ng2-notifications": "^0.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
